UI: fix dropdown menu being clipped

--- a/web/src/components/ast/TopLevelNodeKindView.module.css
+++ b/web/src/components/ast/TopLevelNodeKindView.module.css
@@ -4,7 +4,6 @@
   max-width: 70%;
   width: fit-content;
   height: max-content;
-  overflow: auto;
   margin-top: 2ex;
   margin-bottom: 2ex;
   margin-left: auto;
